
ALTER TABLE LABDATABASE.LOCACOES DROP CONSTRAINT CLIENTES_LOCACOES_FK;
ALTER TABLE LABDATABASE.LOCACOES DROP CONSTRAINT CARROS_LOCACOES_FK;
ALTER TABLE LABDATABASE.LOCACOES DROP CONSTRAINT FUNCIONARIOS_LOCACOES_FK;


DROP TABLE LABDATABASE.CLIENTES;
DROP TABLE LABDATABASE.CARROS;
DROP TABLE LABDATABASE.FUNCIONARIOS;
DROP TABLE LABDATABASE.LOCACOES;

DROP SEQUENCE LABDATABASE.CLIENTES_ID_CLIENTE_SEQ;
DROP SEQUENCE LABDATABASE.CARROS_ID_CARRO_SEQ;
DROP SEQUENCE LABDATABASE.FUNCIONARIOS_ID_FUNCIONARIO_SEQ;
DROP SEQUENCE LABDATABASE.LOCACOES_NUMERO_RESERVA_SEQ;


CREATE TABLE LABDATABASE.CLIENTES (
		ID_CLIENTE NUMBER NOT NULL, 
		NOME_CLIENTE VARCHAR2(250) NOT NULL, 
		CPF VARCHAR2 (11) NOT NULL, 
		CONSTRAINT CLIENTES_PK PRIMARY KEY (ID_CLIENTE)
);

CREATE TABLE LABDATABASE.CARROS (
		ID_CARRO NUMBER NOT NULL,
		MODELO VARCHAR2 (20) NOT NULL,
		PLACA VARCHAR2(7) NOT NULL,
		CATEGORIA VARCHAR2 (15) NOT NULL, 
		VALOR_DIARIA NUMBER NOT NULL, 
		CONSTRAINT CARROS_PK PRIMARY KEY (ID_CARRO)
);

CREATE TABLE LABDATABASE.FUNCIONARIOS (
		ID_FUNCIONARIO NUMBER NOT NULL,
		NOME VARCHAR2(250) NOT NULL,
		CARGO VARCHAR2 (250) NOT NULL, 
		CONSTRAINT FUNCIONARIOS_PK PRIMARY KEY (ID_FUNCIONARIO)
);

CREATE TABLE LABDATABASE.LOCACOES (
		NUMERO_RESERVA NUMBER NOT NULL, 
		DATA_INICIO DATE NOT NULL,
		DATA_FIM DATE NOT NULL,
		ID_CLIENTE NUMBER NOT NULL,
		ID_CARRO NUMBER NOT NULL,
		ID_FUNCIONARIO NUMBER NOT NULL,
		CONSTRAINT LOCACOES_PK PRIMARY KEY (NUMERO_RESERVA)
);

CREATE SEQUENCE LABDATABASE.CLIENTES_ID_CLIENTE_SEQ;
CREATE SEQUENCE LABDATABASE.CARROS_ID_CARRO_SEQ;
CREATE SEQUENCE LABDATABASE.FUNCIONARIOS_ID_FUNCIONARIO_SEQ;
CREATE SEQUENCE LABDATABASE.LOCACOES_NUMERO_RESERVA_SEQ;


ALTER TABLE LABDATABASE.LOCACOES ADD CONSTRAINT CLIENTES_LOCACOES_FK
FOREIGN KEY (ID_CLIENTE)
REFERENCES LABDATABASE.CLIENTES (ID_CLIENTE)
NOT DEFERRABLE;

ALTER TABLE LABDATABASE.LOCACOES ADD CONSTRAINT CARROS_LOCACOES_FK
FOREIGN KEY (ID_CARRO)
REFERENCES LABDATABASE.CARROS (ID_CARRO)
NOT DEFERRABLE;

ALTER TABLE LABDATABASE.LOCACOES ADD CONSTRAINT FUNCIONARIOS_LOCACOES_FK
FOREIGN KEY (ID_FUNCIONARIO)
REFERENCES LABDATABASE.FUNCIONARIOS (ID_FUNCIONARIO)
NOT DEFERRABLE;


GRANT ALL ON LABDATABASE.CLIENTES TO LABDATABASE;
GRANT ALL ON LABDATABASE.CARROS TO LABDATABASE;
GRANT ALL ON LABDATABASE.FUNCIONARIOS TO LABDATABASE;
GRANT ALL ON LABDATABASE.LOCACOES TO LABDATABASE;

