erDiagram
    CLIENTES {
        INT ID_CLIENTE PK
        VARCHAR NOME_CLIENTE
        VARCHAR CPF
    }

    FUNCIONARIOS {
        INT ID_FUNCIONARIO PK
        VARCHAR NOME
        VARCHAR CARGO
    }

    CARROS {
        INT ID_CARRO PK
        VARCHAR MODELO
        VARCHAR PLACA
        VARCHAR CATEGORIA
        NUMERIC VALOR_DIARIA
    }

    LOCACOES {
        INT NUMERO_RESERVA PK
        DATE DATA_INICIO
        DATE DATA_FIM
        INT ID_CLIENTE FK
        INT ID_CARRO FK
        INT ID_FUNCIONARIO FK
    }

  
    CLIENTES ||--o{ LOCACOES : "realizam" 
    FUNCIONARIOS ||--o{ LOCACOES: "supervisionam" 
    CARROS ||--o{ LOCACOES: "correspondem "